--- a/YogaStretchingTimer/Base.lproj/Main.storyboard
+++ b/YogaStretchingTimer/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--MainScreen-->
         <scene sceneID="fs3-Ah-24I">
             <objects>
-                <tableViewController title="MainScreen" id="O5J-ct-sy8" sceneMemberID="viewController">
+                <tableViewController title="MainScreen" id="O5J-ct-sy8" customClass="YSTStartScreenTVC" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="0WE-3E-rjy">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,8 +30,8 @@
                     </navigationItem>
                     <connections>
                         <segue destination="mxT-lo-hWX" kind="show" identifier="showTimer" id="fbA-gi-PZ5"/>
-                        <segue destination="vXZ-lx-hvc" kind="show" identifier="showAddEditTimer" id="zMV-9L-aq3"/>
                         <segue destination="fnj-U0-nvR" kind="show" identifier="showPremadeTimers" id="Joc-Sp-LWG"/>
+                        <segue destination="Eas-MP-NmS" kind="show" identifier="showAddEditTimer" id="8gC-Ps-hng"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lcC-eD-YwC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,7 +41,7 @@
         <!--Timer-->
         <scene sceneID="vnc-o5-Zhv">
             <objects>
-                <viewController title="Timer" id="mxT-lo-hWX" sceneMemberID="viewController">
+                <viewController title="Timer" id="mxT-lo-hWX" customClass="YSTTimerVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Jq4-eo-w8i"/>
                         <viewControllerLayoutGuide type="bottom" id="Y1u-FJ-fdK"/>
@@ -57,28 +57,95 @@
             <point key="canvasLocation" x="1425" y="-534"/>
         </scene>
         <!--AddEditTimer-->
-        <scene sceneID="ufC-wZ-h7g">
+        <scene sceneID="MEz-lf-WYP">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-                <viewController title="AddEditTimer" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                <tableViewController title="AddEditTimer" id="Eas-MP-NmS" customClass="YSTAddEditTimerTVC" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="KjS-Gu-76N">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="k5v-Hi-XaO"/>
-                </viewController>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="titleCell" id="ebv-ex-iZ4">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ebv-ex-iZ4" id="Cuv-y6-r80">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="timeCell" textLabel="zNw-3S-h25" detailTextLabel="Gnm-Mz-Puf" rowHeight="60" style="IBUITableViewCellStyleValue1" id="1oZ-V4-0tG">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1oZ-V4-0tG" id="HaD-QC-ogM">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zNw-3S-h25">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Gnm-Mz-Puf">
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pickerCell" rowHeight="162" id="TO7-9s-AaE">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TO7-9s-AaE" id="xIT-Re-EaR">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <pickerView tag="99" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cap-2o-NLI">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="162"/>
+                                        </pickerView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="Cap-2o-NLI" secondAttribute="trailing" id="6vM-vu-QAs"/>
+                                        <constraint firstItem="Cap-2o-NLI" firstAttribute="leading" secondItem="xIT-Re-EaR" secondAttribute="leading" id="PyD-RR-S26"/>
+                                        <constraint firstAttribute="bottom" secondItem="Cap-2o-NLI" secondAttribute="bottom" id="aLm-SJ-XqD"/>
+                                        <constraint firstItem="Cap-2o-NLI" firstAttribute="top" secondItem="xIT-Re-EaR" secondAttribute="top" id="iSS-k3-LrB"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="imageCell" rowHeight="200" id="Kkt-PL-xIm">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kkt-PL-xIm" id="5Gd-fH-5FN">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1hd-yH-X2d">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="199.5"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="1hd-yH-X2d" firstAttribute="top" secondItem="5Gd-fH-5FN" secondAttribute="top" id="aum-dh-WDC"/>
+                                        <constraint firstAttribute="bottom" secondItem="1hd-yH-X2d" secondAttribute="bottom" id="bP6-da-Am0"/>
+                                        <constraint firstAttribute="trailing" secondItem="1hd-yH-X2d" secondAttribute="trailing" id="tD2-pf-98i"/>
+                                        <constraint firstItem="1hd-yH-X2d" firstAttribute="leading" secondItem="5Gd-fH-5FN" secondAttribute="leading" id="uXA-cI-Csx"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Eas-MP-NmS" id="vCH-ap-dmc"/>
+                            <outlet property="delegate" destination="Eas-MP-NmS" id="pNY-7E-N4X"/>
+                        </connections>
+                    </tableView>
+                    <connections>
+                        <outlet property="pickerView" destination="Cap-2o-NLI" id="00i-ub-yb2"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1a3-AE-epU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1417" y="149"/>
+            <point key="canvasLocation" x="1425" y="156"/>
         </scene>
         <!--PremadeTimers-->
         <scene sceneID="sHq-0Q-Fr8">
             <objects>
-                <collectionViewController title="PremadeTimers" id="fnj-U0-nvR" sceneMemberID="viewController">
+                <collectionViewController title="PremadeTimers" id="fnj-U0-nvR" customClass="YSTPremadeTimersCVC" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="x1G-ua-zxJ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -107,7 +174,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nJs-k4-lTw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1417" y="840"/>
+            <point key="canvasLocation" x="1425" y="840"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="5yD-Lo-jXF">
